<resources>
    <string name="app_name">ArkandArcs</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="summary">Summary</string>
    <string name="okay">Okay</string>
    <string name="session_timeout">Session Timeout, please login in again</string>
    <string name="alert">Alert</string>
    <string name="loading_please_wait">Loading, please wait...</string>
    <string name="Location_needed">Location is needed</string>
    <string name="username_is_required">Email address is required</string>
    <string name="username_is_too_short">Email address is too short</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="arkandarcs_admin">ArkandArcs Admin</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_as_admin">Register as Admin</string>
    <string name="reset_password">Reset Password?</string>
    <string name="login">Login</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="do_you_want_to_delete_this_product">Do you want to delete this product?</string>
    <string name="no_network_available">No network detected</string>
    <string name="naira">"\u20A6"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completed">Complete</string>
    <string name="shipped">Shipped</string>
    <string name="ready_to_ship">Ready</string>
    <string name="pending">Pending</string>
    <string name="do_you_want_to_delete_this_image">Do you want to delete images?</string>
    <string name="quantity">Quantity</string>
    <string name="live">Live</string>
    <string name="product_description">Product Description</string>
    <string name="add_images">Add images</string>
    <string name="amount">Amount</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="product_category">Product Category</string>
    <string name="product_color">Product Color</string>
    <string name="product_name">Product Name</string>
    <string name="create_product">Create Product</string>
    <string name="ntel_url">http://www.ntel.com.ng/</string>
    <string name="select_section_to_edit">Select field to edit</string>
    <string name="login_as_admin">I am an Admin</string>
    <string name="login_as_customer">I am a Customer</string>
    <string name="sign_in_to_continue_as_customer">Sign in as customer</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue_as_admin">Sign in as Admin</string>
    <string-array name="slide_texts">
        <item>Click to visit our website for more deals</item>
        <item>Be first to know when mega deals arrive</item>
        <item>Unlimited plans available for you</item>
        <item>Enjoy a seamless experience</item>
        <item>Enjoy buying data plans</item>
        <item>Access is now a click away</item>
    </string-array>
</resources>
