<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arkandarcs_lighter_gray"
    android:orientation="vertical"
    tools:context=".views.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_20sdp"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/arkandarcs_admin"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_20ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dashboard_buttons"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/login"
                android:textColor="@color/arkandarcs_white"
                android:textSize="@dimen/_14ssp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/dashboard_buttons_gray"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/register_as_admin"
                android:textColor="@color/arkandarcs_white"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/resetPasswordTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="@color/arkandarcs_red_color"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>