<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_undraw_in_no_time"
    android:backgroundTint="@color/arkandarcs_lighter_gray"
    android:orientation="vertical"
    tools:context=".customer.login.CustomerLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:src="@drawable/arkandarcs_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="start"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="start"
            android:text="@string/sign_in_to_continue_as_customer"
            android:textColor="@color/arkandarcs_gray_color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_23sdp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_13sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_4sdp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="@dimen/_13ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:background="@drawable/dashboard_buttons"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/login"
                android:textColor="@color/arkandarcs_white"
                android:textSize="@dimen/_13ssp" />

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_13sdp"
                android:background="@drawable/dashboard_buttons_gray"
                android:fontFamily="@font/rubik_regular"
                android:text="Create Account"
                android:textColor="@color/arkandarcs_white"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/resetPasswordTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textColor="@color/arkandarcs_green"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3223394163127231/7226149794" />

</LinearLayout>